--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
